# sgpu

./: Cargo.toml  Readme.md  rustfmt.toml
examples/: compile_all.rs  triangle.rs
examples/common/: mod.rs
examples/shaders/: sgpu.slang
examples/shaders/triangle/: fragment.slang  fragment.spv  vertex.slang  vertex.spv
src/: api.rs  commands.rs  lib.rs  pipeline.rs  sgpu.slang  swapchain.rs  tests.rs  types.rs
src/backend/: commands.rs  context.rs  descriptors.rs  device.rs  instance.rs  mod.rs  physical_device.rs  resources.rs  swapchain.rs
src/commands/: barrier.rs  commands.rs  mod.rs  rendering_recorder.rs
